7 - Final Project/Dependecy-Track/dtrack-apiserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: dtrack-apiserver
  name: dtrack-apiserver
spec:
  containers:
    - image: dependencytrack/apiserver
      name: dtrack-apiserver
      ports:
        - containerPort: 8080
      volumeMounts:
        - mountPath: /data
          name: dependency-track
  restartPolicy: OnFailure
  volumes:
    - name: dependency-track
      persistentVolumeClaim:
        claimName: dependency-track
status: {}
