7 - Final Project/Dependecy-Track/dtrack-apiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: dtrack-apiserver
  name: dtrack-apiserver
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: dtrack-apiserver
status:
  loadBalancer: {}
